docs: documentation route get sales id
add all documentation with swagger about route get sale by its id
